Student Home Page Added & 2 More Panel Left

--- a/src/main/java/com/blackflower/curriculumcreator/studentspages/ShowClass_StudentPanel.form
+++ b/src/main/java/com/blackflower/curriculumcreator/studentspages/ShowClass_StudentPanel.form
@@ -22,16 +22,23 @@
               <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
               <Component id="homeBtn" min="-2" pref="69" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" attributes="0">
-              <EmptySpace pref="152" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace pref="155" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-                      <Component id="classSelectionComboBox" alignment="0" min="-2" pref="193" max="-2" attributes="0"/>
-                  </Group>
                   <Component id="jScrollPane1" min="-2" pref="629" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="lessonCountLabel" pref="228" max="32767" attributes="0"/>
+                          <Component id="classLabel" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="56" pref="56" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="totalLessonHoursLabel" alignment="0" min="-2" pref="233" max="-2" attributes="0"/>
+                          <Component id="totalStudentsLabel" alignment="1" min="-2" pref="233" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace pref="152" max="32767" attributes="0"/>
+              <EmptySpace pref="155" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -39,22 +46,25 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="homeBtn" min="-2" pref="31" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="25" max="32767" attributes="0"/>
+                  <Component id="homeBtn" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="welcomeLabel" min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="classSelectionComboBox" min="-2" pref="33" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="classLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                  <Component id="totalLessonHoursLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lessonCountLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                  <Component id="totalStudentsLabel" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="335" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <EmptySpace pref="22" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -81,22 +91,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="classSelectionComboBox">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
-            <StringItem index="0" value="CP1"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="classSelectionComboBoxActionPerformed"/>
-      </Events>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Object&gt;"/>
-      </AuxValues>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="classLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Class:"/>
       </Properties>
@@ -115,7 +110,22 @@
           <Font name="sansserif" size="24" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Show Class Details"/>
+        <Property name="text" type="java.lang.String" value="Class Details"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lessonCountLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Lesson Count:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="totalLessonHoursLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Total Lesson Hours:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="totalStudentsLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Total Students: "/>
       </Properties>
     </Component>
   </SubComponents>
